--- a/FrontEnd/src/app/dashboard/home/home.component.html
+++ b/FrontEnd/src/app/dashboard/home/home.component.html
@@ -17,12 +17,12 @@
             <i [class]="metric.icon"></i>
           </div>
         </div>
-        <div class="metric-trend">
+        <!-- <div class="metric-trend">
           <span [class]="metric.trend > 0 ? 'trend-up' : 'trend-down'">
             {{metric.trend}}% 
           </span>
           <span class="trend-label">vs last month</span>
-        </div>
+        </div> -->
       </div>
     </div>
   
