--- a/FrontEnd/src/app/dashboard/users/users.component.html
+++ b/FrontEnd/src/app/dashboard/users/users.component.html
@@ -1,8 +1,12 @@
-
 <div class="mx-auto">
   <div class="bg-white shadow-md rounded-lg overflow-hidden">
-    <div class="px-6 py-4 border-b border-gray-200">
+    <div class="px-6 py-4 border-b border-gray-200 flex justify-between">
       <h2 class="text-xl font-semibold text-gray-800">User Management</h2>
+      <button
+        class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-green-700 flex items-center"
+      >
+        Add User
+      </button>
     </div>
 
     <div
