--- a/FrontEnd/src/app/dashboard/feedback/feedback.component.html
+++ b/FrontEnd/src/app/dashboard/feedback/feedback.component.html
@@ -1,10 +1,19 @@
-<div class="mx-auto max-w-7xl">
+<div class="mx-auto max-w-7xl relative">
+  <div *ngIf="showSuccessToast" class="absolute right-0 bg-green-100 border-t border-b border-green-500 text-green-700 px-4 py-1.5 rounded" role="alert">
+    <p class="font-bold">Informational message</p>
+    <p class="text-sm">Successfully Deleted the Feedback.</p>
+  </div>
+  <div *ngIf="showErrorToast" class="absolute right-0 bg-red-100 border-t border-b border-red-500 text-red-700 px-4 py-1.5 rounded" role="alert">
+    <p class="font-bold">Informational message</p>
+    <p class="text-sm">Failed to Delete the toast.</p>
+  </div>
   <div class="bg-white shadow-md rounded-lg overflow-hidden">
     <div class="px-6 py-4 border-b border-gray-200">
       <h2 class="text-xl font-semibold text-gray-800">
         User Feedback Dashboard
       </h2>
     </div>
+    
 
     <div class="overflow-x-auto">
       <table class="min-w-full divide-y divide-gray-200">
