Dashboard Implementations Done with ForgotPassword and Reset Password Features

--- a/FrontEnd/src/app/auth/reset-password/reset-password.component.html
+++ b/FrontEnd/src/app/auth/reset-password/reset-password.component.html
@@ -16,6 +16,7 @@
             <form
               [formGroup]="resetPasswordForm"
               class="mt-4 space-y-4 lg:mt-5 md:space-y-5"
+              (submit)="resetPassword()"
             >
               <div>
                 <label
