--- a/FrontEnd/src/app/auth/forgot-password/forgot-password.component.html
+++ b/FrontEnd/src/app/auth/forgot-password/forgot-password.component.html
@@ -14,6 +14,7 @@
                 <form
                 [formGroup]="forgotPasswordForm"
                   class="mt-4 space-y-4 lg:mt-5 md:space-y-5"
+                  (submit)="onSubmit()"
                 >
                   <div>
                     <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
