--- a/FrontEnd/src/app/dashboard/carpool/carpool.component.html
+++ b/FrontEnd/src/app/dashboard/carpool/carpool.component.html
@@ -1,5 +1,11 @@
 <!-- carpool-dashboard.component.html -->
-<div class="mx-auto">
+<div class="mx-auto relative">
+  <div *ngIf="showSuccessToast" class="absolute right-0 bg-green-100 border-t border-b border-green-500 text-green-700 px-4 py-1.5 rounded" role="alert">
+    <p class="text-sm">User operation completed successfully.</p>
+  </div>
+  <div *ngIf="showErrorToast" class="absolute right-0 bg-red-100 border-t border-b border-red-500 text-red-700 px-4 py-1.5 rounded" role="alert">
+    <p class="text-sm">User operation Failed</p>
+  </div>
     <div class="bg-white shadow-md rounded-lg overflow-hidden">
       <div class="px-6 py-4 border-b border-gray-200">
         <h2 class="text-xl font-semibold text-gray-800">Available Carpools</h2>
@@ -29,7 +35,7 @@
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{carpool.departureTime}}</td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{carpool.pickupLocation}}</td>
               <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                <button (click)="onEdit(carpool.id)" class="text-indigo-600 hover:text-indigo-900 mr-2">Edit</button>
+                <!-- <button (click)="onEdit(carpool.id)" class="text-indigo-600 hover:text-indigo-900 mr-2">Edit</button> -->
                 <button (click)="onDelete(carpool.id)" class="text-red-600 hover:text-red-900">Delete</button>
               </td>
             </tr>
